# ArbSense

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
arbsense/: __init__.py  data.py  stats.py
sample_data/: all_upcoming_co_4.json  all_upcoming_h2h_1.json  all_upcoming_sports_co_2.json  all_upcoming_sports_co_3.json  all_upcoming_sports_co_4.json  all_upcoming_sports_co_5.json  all_upcoming_sports_co_6.json  all_upcoming_us_h2h_1.json  football_nfl_upcoming_us_h2h_1.json  mlb_h2h_2.json
sample_data/all/: all_upcoming_co.json  all_upcoming_co_2.json
sample_data/football_ncaa/: football_ncaa_upcoming_us_h2h_1.json
sample_data/mlb/: mlb_h2h_1.json
